# opteee

./: .cursorignore  .dockerignore  .env.example  .git-lfs-include  .gitignore  BEGINNER_GUIDE.md  CHAT_CONVERSION_SOW.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_QUICKSTART.md  DEPLOYMENT.md  Dockerfile  Dockerfile.serve  HIGHLIGHTING_FIX_SUMMARY.md  HUGGINGFACE_SETUP.md  README.md  README.md.backup  VERIFICATION_PLAN.md  app-gradio.py  app.py  app.py.backup  app_enhanced.py  benchmark_models.py  chat_app.py  check_audio_files.py  check_chunks.py  chonkie_chunking.py  clean_video_tracker.py  cleanup_repo.sh  collect_video_metadata.py  com.opteee.weekly-refresh.plist  config.py  convert_mp4_to_mp3.py  cookies.txt  create_vector_store.py  debug.py  debug_process.py  deploy_fix.sh  dev_ui.sh  dev_ui_simple.sh  (+105 more)
.claude/: settings.local.json
bots/: README.md
discord/: .env.example  Dockerfile  HUGGINGFACE_SETUP.md  README.md  deploy.sh  discord_bot.py  docker-compose.yml  health_server.py  opteee-bot.service  requirements.txt  start.sh  test_discord_connection.py  test_docker_build.sh
docs/: AUTO_REBUILD_README.md  BOT_INTEGRATION.md  DEPLOYMENT_STEPS.md  GITHUB_SETUP.md  LLM_WIKI.md  processing_report.md
eval/: README.md  compare_chat_eval_runs.py  run_chat_eval.py
processed_pdfs/: 0DTE Options Data Goldman Sachs_March 2023_processed.json  0DTE Trading Rules_processed.json  0DTEs Trading, Gamma Risk and Volatility Propagation_processed.json  1. The Behavior of Individual Investors_processed.json  20221009.IF.FedTightening.Bridgewater_processed.json  (+126 more)
schema/: slugs.md  (+1 more)
(+4661 files in other folders)
