[project]
name = "opteee"
version = "0.1.0"
description = "Process Outlier Trading videos, transcripts, and metadata"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yt-dlp>=2025.3.31",
    "openai-whisper>=20240930",
    "google-api-python-client>=2.167.0",
    "python-dotenv>=1.1.0",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "pytube>=15.0.0",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
